Build native code for WebAssembly target (#4624)
Add support to cmake files for wasm build

--- a/src/Native/Bootstrap/CMakeLists.txt
+++ b/src/Native/Bootstrap/CMakeLists.txt
@@ -9,5 +9,8 @@ add_compile_options(-Wno-unused-private-field)
 add_compile_options(-Wno-tautological-undefined-compare)
 endif()
 
-add_subdirectory(base)
+if(NOT CLR_CMAKE_PLATFORM_WASM)
+    add_subdirectory(base)
+endif(NOT CLR_CMAKE_PLATFORM_WASM)
+
 add_subdirectory(cpp)
