Enable build System.Private.Interop.mono project
only enable mini winrt on windows OS and resolve build output folder overlap problem between CoreCLR and Mono

Please enter the commit message for your changes. Lines starting

Change output folder to {root}\interop

--- a/src/System.Private.Interop/src/System.Private.Interop.CoreCLR.csproj
+++ b/src/System.Private.Interop/src/System.Private.Interop.CoreCLR.csproj
@@ -15,7 +15,7 @@
     <OnlyBuildProjectNLibraries>false</OnlyBuildProjectNLibraries>    
     <TargetsWindows Condition="$(TargetsWindows) ==''">true</TargetsWindows>
     <TargetNetCoreForCoreCLRFramework>true</TargetNetCoreForCoreCLRFramework>
-    <OutputPath>$(OutputPath)\coreclr</OutputPath>
+    <OutputPath>$(BaseOutputPath)$(OSPlatformConfig)\Interop\coreclr</OutputPath>
     <TargetFramework>netstandard1.3</TargetFramework>
     <IsDotNetFrameworkProductAssembly>true</IsDotNetFrameworkProductAssembly>
   </PropertyGroup> 
