Use low case interop

--- a/src/System.Private.Interop/src/System.Private.Interop.Mono.csproj
+++ b/src/System.Private.Interop/src/System.Private.Interop.Mono.csproj
@@ -5,7 +5,7 @@
     <AssemblyName>System.Private.Interop</AssemblyName>
     <TargetName>$(AssemblyName)</TargetName>
     <OutputType>Library</OutputType>
-    <OutputPath>$(BaseOutputPath)$(OSPlatformConfig)\Interop\mono</OutputPath>
+    <OutputPath>$(BaseOutputPath)$(OSPlatformConfig)\interop\mono</OutputPath>
     <ProjectGuid>{A85709C9-22D5-4704-8B7A-73751BB4386A}</ProjectGuid>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DefineConstants>TARGET_CORE_API_SET;CORECLR;</DefineConstants>
