--- a/src/System.Private.Interop/src/System.Private.Interop.CoreCLR.csproj
+++ b/src/System.Private.Interop/src/System.Private.Interop.CoreCLR.csproj
@@ -15,7 +15,7 @@
     <OnlyBuildProjectNLibraries>false</OnlyBuildProjectNLibraries>    
     <TargetsWindows Condition="$(TargetsWindows) ==''">true</TargetsWindows>
     <TargetNetCoreForCoreCLRFramework>true</TargetNetCoreForCoreCLRFramework>
-    <OutputPath>$(BaseOutputPath)$(OSPlatformConfig)\Interop\coreclr</OutputPath>
+    <OutputPath>$(BaseOutputPath)$(OSPlatformConfig)\interop\coreclr</OutputPath>
     <TargetFramework>netstandard1.3</TargetFramework>
     <IsDotNetFrameworkProductAssembly>true</IsDotNetFrameworkProductAssembly>
   </PropertyGroup> 
