Update DynamicInterop to use WinRT Type from CoreRT
This CR contains following related changes
1. In S.P.Interop, Update DynamicInterop in ProjectN to use WinRT type in CoreRT and remove its own definition in IKeyValuePair_CCWAdapter.cs/IReference_CCWAdapter.cs
2. In Mcg, define a WellknownCci Types to be used during import
3. Update PropertyType.Other to PropertyType.OtherType to align with its WinRT definition

Details:
   S.P.Interop.csproj:  reference types(IPropertyValue/PropertyType) from CoreRT
   DynamicInteropBoxingHelper.cs: update type's namespace(from W.F to S.R.WR)
   WinRTReferenceMarshaller.cs: update type's namespace(from W.F to S.R.WR)
   IKeyValuePair_CCWAdapter.cs/IReference_CCWAdapter.cs:  Use types from CoreRT and remove duplicate copy inside this file
   MetadataImporter.cs/WellKnownCciTypes.cs/BinaryUnsafeTypeSystem.cs/McgIR.cs:  Define a WellknownCciType "S.R.WR.PropertyType"

BTW, This change should be the last change for Mcg on CoreCLR for MiniWinRT except the build issue in CoreRT

[tfs-changeset: 1679875]

--- a/src/System.Private.Interop/src/System.Private.Interop.csproj
+++ b/src/System.Private.Interop/src/System.Private.Interop.csproj
@@ -163,15 +163,21 @@
       <Link>System\NotImplemented.cs</Link>
     </Compile>      
     <Compile Include="WinRT\ExceptionHelpers.cs" />
-    <Compile Include="System\Runtime\InteropServices\WindowsRuntime\IActivationFactory.cs" />
+    <Compile Include="System\Runtime\InteropServices\WindowsRuntime\CLRIKeyValuePairImpl.cs" />
     <Compile Include="System\Runtime\InteropServices\WindowsRuntime\CustomPropertyImpl.cs" />
     <Compile Include="System\Runtime\InteropServices\WindowsRuntime\DefaultInterfaceAttribute.cs" />
     <Compile Include="System\Runtime\InteropServices\WindowsRuntime\EventRegistrationTokenTable.cs" />
+    <Compile Include="System\Runtime\InteropServices\WindowsRuntime\IActivationFactory.cs" />
     <Compile Include="System\Runtime\InteropServices\WindowsRuntime\InterfaceImplementedInVersionAttribute.cs" />
     <Compile Include="System\Runtime\InteropServices\WindowsRuntime\IPropertyValue.cs" />
     <Compile Include="System\Runtime\InteropServices\WindowsRuntime\IReferenceArray.cs" />
+    <Compile Include="System\Runtime\InteropServices\WindowsRuntime\PropertyType.cs" />
+    <Compile Include="System\Runtime\InteropServices\WindowsRuntime\PropertyValueImpl.cs" />
     <Compile Include="System\Runtime\InteropServices\WindowsRuntime\ReadOnlyArrayAttribute.cs" />
     <Compile Include="System\Runtime\InteropServices\WindowsRuntime\ReturnValueNameAttribute.cs" />
+    <Compile Include="System\Runtime\InteropServices\WindowsRuntime\ReferenceArrayImpl.cs" />
+    <Compile Include="System\Runtime\InteropServices\WindowsRuntime\ReferenceArrayImplBase.cs" />
+    <Compile Include="System\Runtime\InteropServices\WindowsRuntime\ReferenceImpl.cs" />
     <Compile Include="System\Runtime\InteropServices\WindowsRuntime\WindowsRuntimeImportAttribute.cs" />
     <Compile Include="System\Runtime\InteropServices\WindowsRuntime\WriteOnlyArrayAttribute.cs" />
   </ItemGroup>
