Make Canon types inherit from MetadataType
Over the years, I had a "sigh, I wish Canon types were MetadataTypes" moment several times. I just had another of those.

I don't actually remember why we made these inherit `DefType` instead of `MetadataType`. We can come up with the right answers to all questions a `MetadataType` needs to answer. Canon types not being `MetadataType` is also the sole reason why `RuntimeDeterminedType` can't be a `MetadataType` either.

[tfs-changeset: 1680914]

--- a/src/ILCompiler.TypeSystem/src/ILCompiler.TypeSystem.csproj
+++ b/src/ILCompiler.TypeSystem/src/ILCompiler.TypeSystem.csproj
@@ -28,6 +28,9 @@
     <Compile Include="..\..\Common\src\TypeSystem\Canon\CanonTypes.cs">
       <Link>TypeSystem\Canon\CanonTypes.cs</Link>
     </Compile>
+    <Compile Include="..\..\Common\src\TypeSystem\Canon\CanonTypes.Interop.cs">
+      <Link>TypeSystem\Canon\CanonTypes.Interop.cs</Link>
+    </Compile>
     <Compile Include="..\..\Common\src\TypeSystem\Canon\CanonTypes.Sorting.cs">
       <Link>TypeSystem\Canon\CanonTypes.Sorting.cs</Link>
     </Compile>
